# grib2io-interp

./: .gitignore  LICENSE  MANIFEST.in  README.md  create_docs.sh  meson.build  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_linux.yml  build_macos.yml  build_macosx.yml  build_windows.yml
docs/: grib2io_interp.html  index.html  search.js
docs/grib2io_interp/: __config__.html  interpolate.html
src/: interpolate.f90  interpolate.pyf
src/grib2io_interp/: __init__.py
src/interpolate/: interpolate.f90  interpolate.pyf
src/openmp_handler/: openmp_handler.f90  openmp_handler.pyf
tests/: test_grib2_interp_to_grid.py  test_grib2_interp_to_stations.py  test_grib2_interp_to_stations_scalar.py  test_grib2_interp_to_stations_vector.py
