[build-system]
requires = [
  "oldest-supported-numpy",
  "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "grib2io-interp"
description = "Interpolation component for grib2io providing a Python interface to NCEPLIBS-ip"
authors = [
  {name = "Eric Engle", email = "eric.engle@noaa.gov"},
]
requires-python = ">=3.8"
keywords = [
  "weather", "data-science", "numpy", "meteorology", "weather-data", "atmospheric-science",
  "grib2", "grib2-decoder", "grib2-encoder", "ncep",
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
]
dependencies = [
  "numpy",
] 
dynamic = ["version"]

[project.urls]
Documentation = "https://noaa-mdl.github.io/grib2io-interp"
Respository = "https://github.com/NOAA-MDL/grib2io-interp"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["grib2io_interp"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "grib2io_interp.__config__.grib2io_interp_version"}
