[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python",
    "setuptools",
    "setuptools_scm",
    "oldest-supported-numpy",
    "wheel",
    "ninja"
]

[project]
name = "grib2io-interp"
dynamic = ["version"]
description = "Interpolation component for grib2io providing a Python interface to NCEPLIBS-ip"
readme = "README.md"
authors = [
  {name = "Eric Engle", email = "eric.engle@noaa.gov"},
]
requires-python = ">=3.8"
keywords = [
  "weather", "data-science", "numpy", "meteorology", "weather-data", "atmospheric-science",
  "grib2", "grib2-decoder", "grib2-encoder", "ncep",
]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
]
dependencies = [
  "numpy>=1.26",
] 

[project.urls]
Documentation = "https://noaa-mdl.github.io/grib2io-interp"
Respository = "https://github.com/NOAA-MDL/grib2io-interp"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["grib2io_interp"]
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = "README.md"}
version = {file = "VERSION"}
