# ---------------------------------------------------------------------------------------- 
# setup.cfg for grib2io-interp
#
# Uncomment lines accordingly.
# ----------------------------------------------------------------------------------------

[options]
#usestaticlibs = True

[directories]
# ---------------------------------------------------------------------------------------- 
# Define path for NCEPLIBS-ip Library
#
# Please set ip_dir if include and library files are within the same prefix location.
# If not, please set ip_incdir and ip_libdir.
# ---------------------------------------------------------------------------------------- 
# ip_dir = /usr/local
# ip_incdir =
# ip_libdir =

# ---------------------------------------------------------------------------------------- 
# Define path for NCEPLIBS-sp (potentially...OPTIONAL)
#
# IMPORTANT: As of NCEPLIBS-ip v5.0.0, NCEPLIBS-sp has been integrated into the ip
#            library.
# ---------------------------------------------------------------------------------------- 
# sp_dir = /usr/local
# sp_incdir =
# sp_libdir =
